Some minnor updats are done....

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <section id="header">
         <div class="head active">
-            <a class="logo" href="/index.html">Aktu Quantum Store</a>
+            <a class="logo" href="/index.html">Quantum Book store</a>
             <div class="openmenu"><i class="fa-solid fa-bars"></i></a></div>
             <div id="closemenu"><i class="fa-solid fa-xmark"></i></div>
             <nav class="navbar">
@@ -83,7 +83,7 @@
 
         <div class="cover">
             <DIV class="heading">
-                <H1>Welcome to Aktu Quantum Store</H1>
+                <H1>Welcome to Quantum Book store</H1>
                 <H6>Get all PDFs at One Place</H6>
             </DIV>
         </div>
