--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
     </footer>
-    
+    <p>Made with ❤️ by Nikhil Maurya</p>
 </body>
 <script src="index.js"></script>
 <script src="https://kit.fontawesome.com/a3c813f76d.js"></script>
